update appointment crud
