# src/controllers/appointmentController.js
@@ -1,7 +1,7 @@
 import { appointmentModel } from '../models';
 import { CONSTANTS } from '../constants';
 import { errorLogger } from '../utils';
-import { specialityService } from '../mongoServices';
+import { appointmentService, specialityService } from '../mongoServices';
 const {
 	RESPONSE_MESSAGE: { FAILED_RESPONSE, APPOINTMENT },
 	STATUS_CODE: { SUCCESS, FAILED },
@@ -39,7 +39,7 @@ const createAppointment = async (req, res) => {
 			return res.status(SUCCESS).send({
 				success: true,
 				msg: APPOINTMENT.CREATE_SUCCESS,
-				data: [],
+				data: [savePayload],
 			});
 		} else {
 			throw new Error(APPOINTMENT.CREATE_FAILED);
@@ -53,7 +53,94 @@ const createAppointment = async (req, res) => {
 		});
 	}
 };
+const getAppointment = async (req, res) => {
+	try {
+		let { data, totalCount } = await appointmentService.findAllQuery(req.query);
+		if (data) {
+			return res.status(SUCCESS).json({
+				success: true,
+				message: APPOINTMENT.GET_SUCCESS,
+				data,
+				totalCount,
+			});
+		} else {
+			throw new Error(HEALTH_ARTICLE.GET_FAILED);
+		}
+	} catch (error) {
+		errorLogger(error.message, req.originalUrl, req.ip);
+		console.log('error', error);
+		return res.status(FAILED).json({
+			success: false,
+			error: error.message || FAILED_RESPONSE,
+		});
+	}
+};
+const updateAppointment = async (req, res) => {
+	try {
+		const filter = { _id: req.params.id };
+		const update = {
+			...req.body,
+		};
+		const projection = {};
+		const AppointmentUpdate = await appointmentService.updateOneQuery(
+			filter,
+			update,
+			projection,
+		);
+		if (AppointmentUpdate) {
+			return res.status(SUCCESS).send({
+				success: true,
+				message: APPOINTMENT.UPDATE_SUCCESS,
+				data: [],
+			});
+		} else {
+			throw new Error(APPOINTMENT.UPDATE_FAILED);
+		}
+	} catch (error) {
+		errorLogger(error.message, req.originalUrl, req.ip);
+		return res.status(FAILED).send({
+			success: false,
+			message: APPOINTMENT.UPDATE_FAILED,
+			data: [],
+		});
+	}
+};
+const deleteAppointment = async (req, res) => {
+	try {
+		const { id } = req.params;
+		let filter = { _id: id },
+			updateData = {
+				isEnabledL: false,
+				deletedAt: new Date(),
+				deletedBy: req.currentUser._id,
+			};
+		const deleteAPP = await appointmentService.updateOneQuery(
+			filter,
+			updateData,
+		);
+
+		if (deleteAPP) {
+			return res.status(SUCCESS).send({
+				success: true,
+				msg: APPOINTMENT.DELETE_SUCCESS,
+				data: [],
+			});
+		} else {
+			throw new Error(APPOINTMENT.DELETE_FAILED);
+		}
+	} catch (error) {
+		console.log('error', error);
+		errorLogger(error.message, req.originalUrl, req.ip);
+		return res.status(FAILED).json({
+			success: false,
+			error: error.message || FAILED_RESPONSE,
+		});
+	}
+};
 
 export default {
 	createAppointment,
+	getAppointment,
+	updateAppointment,
+	deleteAppointment,
 };
